fix alignment on small screen

--- a/ratatouilleonthebeat.css
+++ b/ratatouilleonthebeat.css
@@ -15,7 +15,6 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    flex: 1 0 40%;
     gap: 48px;
     justify-content: center;
     align-items: center;
@@ -49,6 +48,7 @@ hr {
 /* images themselves */
 #image-container {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 60px;
 }
@@ -80,15 +80,7 @@ img {
     .photos > * {
         flex: 1 0 40%;
     }
-}
 
-@media only screen and (max-width: 600px) {
-    .photos > * {
-      flex: 1 0 100%; /* Full width on very small screens */
-    }
-}
-
-@media only screen and (max-width: 800px) {
     #main-image {
         flex: 1 0 40%;
         gap: 12px;
@@ -102,5 +94,11 @@ img {
         flex: 1 0 40%;
         max-width: 100%;
         height: auto;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .photos > * {
+      flex: 1 0 100%; /* Full width on very small screens */
     }
 }
